--- a/.env
+++ b/.env
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=alagreen
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=kalzenwe_ielts1
+DB_USERNAME=kalzenwe_ielts1	
+DB_PASSWORD=Thanhhoi123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
