--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=alagreen
+DB_DATABASE=pasal
 DB_USERNAME=root
 DB_PASSWORD=
 
