--- a/.env
+++ b/.env
@@ -10,9 +10,9 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 
-DB_DATABASE=pasal
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=kalzenwe_pasal
+DB_USERNAME=kalzenwe_pasal
+DB_PASSWORD=Thanhhoi123
 
 
 
